# grant-path-ai

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/middleware/: auth.py  error_handler.py  main.py  rate_limiter.py
api/routes/: ai.py  applications.py  grants.py  health.py
tests/: conftest.py  test_ai_routes.py  test_health_routes.py  test_middleware_auth.py  test_middleware_rate_limiter.py
